k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-server
  labels:
    name: oauth2-server
    environment: production
